test/programs/good/check-terms-precedence/gate_controlled_by_quantum_terms_followed_by_case.lq
fun :: Bit
fun = (with [ t1 t2, t3 ] ctrl [ @1, @1 ]) (case x of a1 -> a2; b1 -> b2);

